pl 51
	- bumped version nr

pl 50
	- bf's: PATHSEP
	- png

pl 49
	- use yodl2ms and striproff for txt conversion
	- bf: chmod fail

pl 48
	- bumped version for yodl after various (lily pl7) changes

pl 47
	- bf: patch in website after 'make release'
	- windows ln -> cp
	- bf: texinfo build

pl 46
	- bf: versioning typo: topleveL_MAJOR
	- bf: reincluded optional STATE-VECTOR
pl 45
	- Foo_rules.make -> foo-rules.make

pl 44
	- split: Toplevel.make, debian/Makefile, Documentation/topdocs/Makefile

pl 43
	- grand split up in targets/rules/variables.  The vars should be before rules!!
pl 42
	- fake-msgfmt.sh; urg copied from fake-yodl

pl 41
	- standard naming: _FILES
	- use install-sh
	- junked most check-X-deps
	- standard naming: dir/out/library.a
	- split C++ / C stuff in separate files.  Moved out of default stuff
	- automake.yo updates
	- fake-yodl.sh

pl 40
	- bf's: texinfo
	- bf's: package-zip.sh for bash-2.0
	- typo package-diff

pl 39
	- disabled toplevel index

pl 38
	- bf's: topweb, Documentation
	- bf: ls-latex

pl 37
	- bf's: add-html-footer (ok, i've been reading /.)
	
pl 36.hwn1
	- Metafont.make
	- use := assignment for shell & wildcard stuff

pl 36
	- bf: Executable.make install

pl 35
	- bf: Po_rules
	- grand foreach hack (HWN)

pl 34
	- stepmake/*shared.make

pl 33
	- make dist fix
	- yodl/lily website fixes

pl 32
 	- DEPTH: enable fixing of 'yodl using yodl'
 	- bf's: package-diff: --dir-* 

pl 31.hwn1
	- bf ls-latex.py; added format

pl 31
	- fixed make-flags
	- fixup package-diff and added to-dir, from-dir

pl 30.hwn2
	- 

pl 30.hwn1
	- doc++ target	
	- make -> $(MAKE)

pl 30
	- add-html-footer: html/body/title

pl 29.hwn1
	- automake.urgh -> automake.yo

pl 29
	- counter fix

pl 28
	- mini fix voor soladeris (HWN)
	- add-html-footer fixes
	- dropped pl

pl 27
	- irix fixes(?) (HWN)

pl 26.jcn3
	- update.py: try at stupid advice
	- bf: ls-latex .yo author
	- bf: Excutable.make install

pl 26.jcn2
	- no changes

pl 26.hwn1