@@ -1,5 +1,4 @@
 # title	   package specific targets
-# file	   make/Targets.make
 
 .PHONY : check-dist-deps check-make-deps check-rpm-doc-deps check-html-deps check-www-doc check-rpm-icons
 
@@ -17,8 +16,4 @@ check-rpm-icons:
 
 check-make-deps:
 	$(MAKE) -C $(depth)/make
-
-# urg urg
-$(configheader): $(depth)/$(configuration).hh
-	cp $< $@
 
